--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is next js Project to manage the IMO customer and providing offer to the customer",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "nodemon --exec ts-node src/index.ts",
     "start": "node dist/index.js",
     "build": "tsc",
     "build:watch": "tsc --watch",
@@ -26,7 +26,7 @@
   "devDependencies": {
     "@types/debug": "^4.1.12",
     "@types/express": "^5.0.6",
-    "@types/node": "^25.0.9",
+    "@types/node": "^25.0.10",
     "@typescript-eslint/eslint-plugin": "^8.53.0",
     "@typescript-eslint/parser": "^8.53.0",
     "eslint": "^9.39.2",
